docs: Chapter 08 v3のPart 3を公式モジュール詳細解説に全面改訂
- モジュール構造とファイル一覧
- main.tf: data.alz_architectureでYAML読み込み
- locals.tf: 管理グループレベル分けとポリシー抽出
- main.management_groups.tf: 階層的な作成（Level 0-6）とリトライ設定
- main.policy_definitions.tf: ポリシー定義の展開
- main.policy_assignments.tf: ポリシー割り当てとidentity設定
- variables.tf: 主要な入力変数の詳細
- outputs.tf: リソースIDの出力

Chapter 07と同レベルの詳細度で実際のコードを解説

--- a/docs-site/docs/08_管理グループとポリシーv3.md
+++ b/docs-site/docs/08_管理グループとポリシーv3.md
@@ -295,120 +295,475 @@ https://github.com/Azure/terraform-azurerm-avm-ptn-alz
 
 
 ここからは公式のモジュールを開きながら見ていきましょう。こんな感じ↓
+
 ![モジュールとドキュメントを並べて見る](img/スクリーンショット3.png)
 
-**このモジュールの役割：**
+**主要ファイル：**
 
-- 管理グループ階層の作成
-- ポリシー定義の展開
-- ポリシー割り当ての適用
-- ロールベースアクセス制御（RBAC）の設定
+```text
+terraform-azurerm-avm-ptn-alz/
+├── main.tf                          # メインエントリポイント（data.alz_architecture）
+├── main.management_groups.tf        # 管理グループ作成（Level 0-6）
+├── main.policy_definitions.tf       # ポリシー定義
+├── main.policy_set_definitions.tf   # ポリシーセット定義
+├── main.policy_assignments.tf       # ポリシー割り当て
+├── main.policy_role_assignments.tf  # ポリシー用RBAC
+├── main.role_definitions.tf         # カスタムロール定義
+├── main.role_assignments.tf         # RBAC割り当て
+├── locals.tf                        # ローカル変数（管理グループのレベル分け）
+├── variables.tf                     # 入力変数
+├── outputs.tf                       # 出力
+└── terraform.tf                     # プロバイダー要件
+```
 
-**作成されるリソース（主要）：**
+**このモジュールが作成するリソース：**
 
 | リソース | 個数 | 用途 |
 |---------|------|------|
-| `azurerm_management_group` | 複数 | 管理グループ階層 |
-| `azurerm_management_group_policy_assignment` | 複数 | ポリシー割り当て |
-| `azurerm_policy_definition` | 複数 | カスタムポリシー |
-| `azurerm_policy_set_definition` | 複数 | ポリシーイニシアティブ |
-| `azurerm_role_assignment` | 複数 | RBAC権限 |
+| `azapi_resource` (management_groups) | 複数（レベル0-6） | 管理グループ階層 |
+| `azapi_resource` (policy_definitions) | 複数 | カスタムポリシー定義 |
+| `azapi_resource` (policy_set_definitions) | 複数 | ポリシーイニシアティブ |
+| `azapi_resource` (policy_assignments) | 複数 | ポリシー割り当て |
+| `azapi_resource` (policy_role_assignments) | 複数 | ポリシー用RBAC |
+| `azapi_resource` (role_definitions) | 複数 | カスタムロール定義 |
+| `azapi_resource` (management_group_role_assignments) | 複数 | 管理グループRBAC |
 
-### 3-2: 主要な入力変数
+### 3-2: main.tf - データソースでYAML読み込み
 
-```hcl title="主要変数（抜粋）"
+```hcl title="main.tf"
+data "alz_architecture" "this" {
+  name                         = var.architecture_name
+  root_management_group_id     = var.parent_resource_id
+  location                     = var.location
+  policy_assignments_to_modify = var.policy_assignments_to_modify
+  policy_default_values        = var.policy_default_values
+
+  override_policy_definition_parameter_assign_permissions_set   = var.override_policy_definition_parameter_assign_permissions_set
+  override_policy_definition_parameter_assign_permissions_unset = var.override_policy_definition_parameter_assign_permissions_unset
+}
+```
+
+**何してる？**
+
+`alz` providerの`data.alz_architecture`でYAML定義を読み込み：
+
+- `lib/architecture_definitions/`から管理グループ階層
+- `lib/archetype_definitions/`から各アーキタイプのポリシー定義
+- テンプレート変数（`${parent_management_group_id}`等）を置換
+
+### 3-3: locals.tf - 管理グループのレベル分け
+
+```hcl title="locals.tf"
+locals {
+  management_groups = { for v in data.alz_architecture.this.management_groups : v.id => {
+    id           = v.id
+    level        = v.level
+    exists       = v.exists
+    display_name = v.display_name
+    parent_id    = v.parent_id
+  } }
+  management_groups_level_0 = { for k, v in local.management_groups : k => v if v.level == 0 && !v.exists }
+  management_groups_level_1 = { for k, v in local.management_groups : k => v if v.level == 1 && !v.exists }
+  management_groups_level_2 = { for k, v in local.management_groups : k => v if v.level == 2 && !v.exists }
+  management_groups_level_3 = { for k, v in local.management_groups : k => v if v.level == 3 && !v.exists }
+  management_groups_level_4 = { for k, v in local.management_groups : k => v if v.level == 4 && !v.exists }
+  management_groups_level_5 = { for k, v in local.management_groups : k => v if v.level == 5 && !v.exists }
+  management_groups_level_6 = { for k, v in local.management_groups : k => v if v.level == 6 && !v.exists }
+}
+
+locals {
+  policy_definitions = {
+    for pdval in flatten([
+      for mg in data.alz_architecture.this.management_groups : [
+        for pdname, pd in mg.policy_definitions : {
+          key        = pdname
+          definition = jsondecode(pd)
+          mg         = mg.id
+        }
+      ]
+  ]) : "${pdval.mg}/${pdval.key}" => pdval }
+}
+
+locals {
+  policy_set_definitions = {
+    for psdval in flatten([
+      for mg in data.alz_architecture.this.management_groups : [
+        for psdname, psd in mg.policy_set_definitions : {
+          key            = psdname
+          set_definition = jsondecode(psd)
+          mg             = mg.id
+        }
+      ]
+  ]) : "${psdval.mg}/${psdval.key}" => psdval }
+}
+```
+
+**何してる？**
+
+**管理グループのレベル分け：**
+
+- `data.alz_architecture.this.management_groups`から全管理グループを取得
+- `.level`でレベル（0-6）を判定
+- `.exists`で既存管理グループを除外
+- レベルごとに`local.management_groups_level_X`を作成
+
+**ポリシー定義の抽出：**
+
+- 各管理グループの`.policy_definitions`からJSONを抽出
+- キー形式：`"<管理グループID>/<ポリシー定義名>"`
+
+**ポリシーセット定義の抽出：**
+
+- 各管理グループの`.policy_set_definitions`から抽出
+
+### 3-4: main.management_groups.tf - 階層的な作成
+
+```hcl title="main.management_groups.tf（Level 0の例）"
+resource "azapi_resource" "management_groups_level_0" {
+  for_each = local.management_groups_level_0
+
+  name      = each.value.id
+  parent_id = "/"
+  type      = "Microsoft.Management/managementGroups@2023-04-01"
+  body = {
+    properties = {
+      details = {
+        parent = {
+          id = "/providers/Microsoft.Management/managementGroups/${each.value.parent_id}"
+        }
+      }
+      displayName = each.value.display_name
+    }
+  }
+  create_headers = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  delete_headers = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  read_headers   = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  replace_triggers_external_values = [
+    each.value.parent_id,
+  ]
+  retry = var.retries.management_groups.error_message_regex != null ? {
+    error_message_regex  = var.retries.management_groups.error_message_regex
+    interval_seconds     = lookup(var.retries.management_groups, "interval_seconds", null)
+    max_interval_seconds = lookup(var.retries.management_groups, "max_interval_seconds", null)
+    multiplier           = lookup(var.retries.management_groups, "multiplier", null)
+    randomization_factor = lookup(var.retries.management_groups, "randomization_factor", null)
+  } : null
+  schema_validation_enabled = var.schema_validation_enabled.management_groups
+  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+
+  timeouts {
+    create = var.timeouts.management_group.create
+    delete = var.timeouts.management_group.delete
+    read   = var.timeouts.management_group.read
+    update = var.timeouts.management_group.update
+  }
+
+  depends_on = [
+    terraform_data.management_groups_dependencies,
+  ]
+}
+
+# Level 1-6も同様の構造（depends_onが前レベルになる）
+resource "azapi_resource" "management_groups_level_1" {
+  for_each = local.management_groups_level_1
+  # ... 同様の設定
+  depends_on = [azapi_resource.management_groups_level_0]
+}
+```
+
+**何してる？**
+
+**階層的な作成順序：**
+
+1. Level 0 → Level 1 → Level 2 → ... → Level 6の順番
+2. `depends_on`で前レベルの完了を待つ
+3. 親管理グループが存在してから子を作成
+
+**リトライ設定：**
+
+- `retry.error_message_regex`: "AuthorizationFailed"などのエラーで再試行
+- `interval_seconds`: リトライ間隔
+- `max_interval_seconds`: 最大間隔
+- `multiplier`: 間隔の倍率
+- `randomization_factor`: ランダム化係数
+
+**タイムアウト設定：**
+
+- `create`: 作成タイムアウト（デフォルト60分）
+- `delete`: 削除タイムアウト（デフォルト5分）
+- `update`: 更新タイムアウト（デフォルト5分）
+- `read`: 読み取りタイムアウト（デフォルト60分）
+
+### 3-5: main.policy_definitions.tf - ポリシー定義の展開
+
+```hcl title="main.policy_definitions.tf"
+resource "azapi_resource" "policy_definitions" {
+  for_each = local.policy_definitions
+
+  name      = each.value.definition.name
+  parent_id = "${coalesce(lookup(var.parent_id_overrides.policy_definitions, each.key, null), "/providers/Microsoft.Management/managementGroups")}/${each.value.mg}"
+  type      = "Microsoft.Authorization/policyDefinitions@2021-06-01"
+  body = {
+    properties = each.value.definition.properties
+  }
+  create_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  delete_headers         = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  read_headers           = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  response_export_values = []
+  retry = var.retries.policy_definitions.error_message_regex != null ? {
+    error_message_regex  = var.retries.policy_definitions.error_message_regex
+    interval_seconds     = lookup(var.retries.policy_definitions, "interval_seconds", null)
+    max_interval_seconds = lookup(var.retries.policy_definitions, "max_interval_seconds", null)
+    multiplier           = lookup(var.retries.policy_definitions, "multiplier", null)
+    randomization_factor = lookup(var.retries.policy_definitions, "randomization_factor", null)
+  } : null
+  schema_validation_enabled = var.schema_validation_enabled.policy_definitions
+  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+
+  timeouts {
+    create = var.timeouts.policy_definition.create
+    delete = var.timeouts.policy_definition.delete
+    read   = var.timeouts.policy_definition.read
+    update = var.timeouts.policy_definition.update
+  }
+
+  depends_on = [time_sleep.after_management_groups]
+}
+```
+
+**何してる？**
+
+**ポリシー定義の作成：**
+
+- `local.policy_definitions`（`locals.tf`で作成）をループ
+- 各管理グループに対応するポリシー定義を展開
+- `parent_id`で配置先管理グループを指定
+
+**依存関係：**
+
+- `depends_on = [time_sleep.after_management_groups]`で管理グループ作成後に実行
+
+### 3-6: main.policy_assignments.tf - ポリシー割り当て
+
+```hcl title="main.policy_assignments.tf（抜粋）"
+resource "azapi_resource" "policy_assignments" {
+  for_each = local.policy_assignments_final
+
+  location  = var.location
+  name      = each.value.assignment.name
+  parent_id = "${coalesce(lookup(var.parent_id_overrides.policy_assignments, each.key, null), "/providers/Microsoft.Management/managementGroups")}/${each.value.mg}"
+  type      = "Microsoft.Authorization/policyAssignments@2024-04-01"
+  body = {
+    properties = {
+      description       = lookup(each.value.assignment.properties, "description", null)
+      definitionVersion = lookup(each.value.assignment.properties, "definitionVersion", "1.*.*")
+      displayName       = lookup(each.value.assignment.properties, "displayName", null)
+      enforcementMode   = lookup(each.value.assignment.properties, "enforcementMode", null)
+      metadata = merge(lookup(each.value.assignment.properties, "metadata", {}), {
+        createdBy = ""
+        createdOn = ""
+        updatedBy = ""
+        updatedOn = ""
+      })
+      nonComplianceMessages = lookup(each.value.assignment.properties, "nonComplianceMessages", null)
+      parameters            = lookup(each.value.assignment.properties, "parameters", null)
+      policyDefinitionId    = lookup(each.value.assignment.properties, "policyDefinitionId", null)
+      resourceSelectors     = lookup(each.value.assignment.properties, "resourceSelectors", null)
+    }
+  }
+  identity = lookup(each.value.assignment, "identity", null) != null ? {
+    type        = each.value.assignment.identity.type
+    identityIds = lookup(each.value.assignment.identity, "identityIds", null)
+  } : null
+
+  create_headers = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  delete_headers = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  read_headers   = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+  retry = var.retries.policy_assignments.error_message_regex != null ? {
+    error_message_regex  = var.retries.policy_assignments.error_message_regex
+    interval_seconds     = lookup(var.retries.policy_assignments, "interval_seconds", 5)
+    max_interval_seconds = lookup(var.retries.policy_assignments, "max_interval_seconds", 30)
+    multiplier           = lookup(var.retries.policy_assignments, "multiplier", null)
+    randomization_factor = lookup(var.retries.policy_assignments, "randomization_factor", null)
+  } : null
+  schema_validation_enabled = var.schema_validation_enabled.policy_assignments
+  update_headers            = var.enable_telemetry ? { "User-Agent" : local.avm_azapi_header } : null
+
+  timeouts {
+    create = var.timeouts.policy_assignment.create
+    delete = var.timeouts.policy_assignment.delete
+    read   = var.timeouts.policy_assignment.read
+    update = var.timeouts.policy_assignment.update
+  }
+
+  depends_on = [
+    terraform_data.policy_assignments_dependencies,
+    time_sleep.after_policy_set_definitions,
+  ]
+}
+```
+
+**何してる？**
+
+**ポリシー割り当ての作成：**
+
+- アーキタイプ定義に基づいて各管理グループにポリシーを割り当て
+- `enforcementMode`: "Default"（有効）/"DoNotEnforce"（無効）
+- `parameters`: ポリシーパラメータ（JSON形式）
+- `identity`: Managed Identityの設定（ポリシーがリソース修正する場合）
+
+**リトライ設定の工夫：**
+
+- `interval_seconds = 5`: 短い間隔から開始
+- `max_interval_seconds = 30`: 最大30秒まで延長
+- ポリシー定義作成直後のエラー対策
+
+### 3-7: variables.tf - 主要な入力変数
+
+```hcl title="variables.tf（主要部分）"
 variable "architecture_name" {
   type        = string
-  default     = "alz"
-  description = "アーキテクチャ定義の名前"
+  description = "アーキテクチャ定義の名前（*.alz_architecture_definition.[json|yaml|yml]）"
+  nullable    = false
 }
 
 variable "parent_resource_id" {
   type        = string
-  description = "親管理グループのリソースID"
+  description = "親管理グループのリソースID（テナントIDまたは管理グループ名）"
+  nullable    = false
+
+  validation {
+    condition     = !strcontains(var.parent_resource_id, "/")
+    error_message = "管理グループ名のみを指定（パスは含めない）"
+  }
 }
 
 variable "location" {
   type        = string
-  description = "デフォルトのAzureリージョン"
+  description = "デフォルトリージョン（ポリシーのManaged Identity用）"
+  nullable    = false
 }
 
 variable "policy_default_values" {
   type        = map(string)
   default     = {}
   description = "ポリシーパラメータのデフォルト値"
+  nullable    = false
 }
 
-variable "subscription_placement" {
-  type        = map(list(string))
+variable "policy_assignments_to_modify" {
+  type = map(object({
+    policy_assignments = map(object({
+      enforcement_mode        = optional(string)
+      identity                = optional(string)
+      identity_ids            = optional(set(string))
+      parameters              = optional(map(any))
+      non_compliance_messages = optional(list(object({
+        message                        = string
+        policy_definition_reference_id = optional(string)
+      })))
+      resource_selectors = optional(list(object({
+        name = string
+        selectors = list(object({
+          kind   = string
+          in     = optional(list(string))
+          notIn  = optional(list(string))
+        }))
+      })))
+    }))
+  }))
   default     = {}
-  description = "サブスクリプションの配置先"
+  description = "ポリシー割り当ての変更設定"
+  nullable    = false
+}
+
+variable "retries" {
+  type = object({
+    management_groups = optional(object({
+      error_message_regex  = optional(list(string))
+      interval_seconds     = optional(number)
+      max_interval_seconds = optional(number)
+      multiplier           = optional(number)
+      randomization_factor = optional(number)
+    }), {})
+    # ... 他のリソース種別のretries設定
+  })
+  default     = {}
+  description = "リトライ設定"
+  nullable    = false
+}
+
+variable "timeouts" {
+  type = object({
+    management_group = optional(object({
+      create = optional(string, "60m")
+      delete = optional(string, "5m")
+      update = optional(string, "5m")
+      read   = optional(string, "60m")
+    }), {})
+    # ... 他のリソース種別のtimeouts設定
+  })
+  default     = {}
+  description = "タイムアウト設定"
+  nullable    = false
 }
 ```
 
-### 3-3: アーキテクチャ定義の読み込み
+**主要な変数：**
 
-モジュール内部では、`lib/`フォルダ（もしくはカスタムパス）からYAML定義を読み込みます。
+| 変数 | 必須 | デフォルト | 用途 |
+|------|------|-----------|------|
+| `architecture_name` | ✅ 必須 | なし | アーキテクチャ定義名 |
+| `parent_resource_id` | ✅ 必須 | なし | 親管理グループID |
+| `location` | ✅ 必須 | なし | デフォルトリージョン |
+| `policy_default_values` | オプション | `{}` | ポリシーパラメータ |
+| `policy_assignments_to_modify` | オプション | `{}` | ポリシー割り当て変更 |
+| `retries` | オプション | `{}` | リトライ設定 |
+| `timeouts` | オプション | 各60分等 | タイムアウト設定 |
 
-**主要なYAMLファイル：**
+### 3-8: outputs.tf - 出力
 
-| ファイル | 役割 |
-|---------|------|
-| `alz_architecture_definition.yaml` | 管理グループ階層構造 |
-| `<archetype>_alz_archetype_definition.yaml` | アーキタイプ定義 |
-| `policy_*.json` | ポリシー定義（JSON） |
-
-### 3-4: 管理グループの作成ロジック
-
-モジュール内部では、YAML定義を解析して管理グループを動的に作成します。
-
-```hcl title="内部ロジック（概念）"
-# 1. YAML定義を読み込む
-locals {
-  architecture_definition = yamldecode(file("${path.module}/lib/architecture_definitions/${var.architecture_name}.alz_architecture_definition.yaml"))
+```hcl title="outputs.tf"
+output "management_group_resource_ids" {
+  description = "管理グループ名とリソースIDのマップ"
+  value = { for k, v in merge(
+    azapi_resource.management_groups_level_0,
+    azapi_resource.management_groups_level_1,
+    azapi_resource.management_groups_level_2,
+    azapi_resource.management_groups_level_3,
+    azapi_resource.management_groups_level_4,
+    azapi_resource.management_groups_level_5,
+    azapi_resource.management_groups_level_6,
+  ) : k => v.id }
 }
 
-# 2. 管理グループを動的に作成
-resource "azurerm_management_group" "level_1" {
-  for_each = local.management_groups_level_1
-
-  name         = each.value.id
-  display_name = each.value.display_name
-  parent_management_group_id = var.parent_resource_id
+output "policy_assignment_resource_ids" {
+  description = "ポリシー割り当て名とリソースIDのマップ"
+  value       = { for k, v in azapi_resource.policy_assignments : k => v.id }
 }
 
-resource "azurerm_management_group" "level_2" {
-  for_each = local.management_groups_level_2
-
-  name         = each.value.id
-  display_name = each.value.display_name
-  parent_management_group_id = azurerm_management_group.level_1[each.value.parent].id
+output "policy_definition_resource_ids" {
+  description = "ポリシー定義名とリソースIDのマップ"
+  value       = { for k, v in azapi_resource.policy_definitions : k => v.id }
 }
 
-# （以下、レベルごとに繰り返し）
-```
-
-### 3-5: ポリシー割り当てのロジック
-
-```hcl title="ポリシー割り当て（概念）"
-# アーキタイプからポリシー割り当てを取得
-locals {
-  policy_assignments = {
-    for mg_key, mg_value in local.management_groups :
-    mg_key => lookup(local.archetypes[mg_value.archetype], "policy_assignments", {})
-  }
+output "policy_set_definition_resource_ids" {
+  description = "ポリシーセット定義名とリソースIDのマップ"
+  value       = { for k, v in azapi_resource.policy_set_definitions : k => v.id }
 }
 
-# ポリシーを割り当て
-resource "azurerm_management_group_policy_assignment" "this" {
-  for_each = local.policy_assignments
-
-  name                 = each.value.name
-  policy_definition_id = each.value.policy_definition_id
-  management_group_id  = each.value.management_group_id
-  parameters           = jsonencode(each.value.parameters)
+output "role_definition_resource_ids" {
+  description = "ロール定義名とリソースIDのマップ"
+  value       = { for k, v in azapi_resource.role_definitions : k => v.id }
 }
 ```
+
+**何を出力してる？**
+
+- 作成された全リソースのIDマップ
+- 他モジュールから参照可能
+
+
 
 ---
 
