docs: Chapter 09 v3のURL修正とスクリーンショット追加箇所マーク

--- a/docs-site/docs/09_管理リソースv3.md
+++ b/docs-site/docs/09_管理リソースv3.md
@@ -475,6 +475,7 @@ output "management_resources" {
 
 https://github.com/Azure/terraform-azurerm-avm-ptn-alz-management/tree/v0.9.0
 
+<!-- TODO: スクリーンショット追加 - GitHubリポジトリとVS Codeを並べて表示 -->
 
 ここからは公式のモジュールを開きながら見ていきましょう。GitHubで上記のリポジトリを開いて、コードと照らし合わせながら読むとわかりやすいです。
 
