docs: 全章に「この章で学ぶこと」infoボックスを統一
- Chapter 06のデザインパターンに統一
- 各章で学ぶ内容を6項目でリスト化
- ユーザビリティ向上

--- a/docs-site/docs/03_設定ファイル完全解説.md
+++ b/docs-site/docs/03_設定ファイル完全解説.md
@@ -1,17 +1,14 @@
 # 03. 設定ファイル完全解説 - platform-landing-zone.auto.tfvars
 
+!!! info "この章で学ぶこと"
+    `platform-landing-zone.auto.tfvars`（約500行）を完全解説します：
 
-## このChapterでやること
-
-このプロジェクトで一番重要なファイル、`platform-landing-zone.auto.tfvars`を1行ずつ解説していきます。
-
-このファイルは約500行ありますが、怖がらなくて大丈夫です。
-実は同じパターンの繰り返しが多いので、パターンさえ覚えれば読めるようになります。
-
-このChapterを読み終わったら、
-「ここを変えればFirewall有効になるんだ」
-「このリージョン設定を変えればいいのか」
-というのがわかるようになります。
+    1. テンプレート変数の仕組み（`$${ }`記法）
+    2. ファイル構造の全体像（6つのセクション）
+    3. 各設定項目の詳細解説
+    4. リージョン設定とカスタム置換
+    5. 管理リソース・ネットワーク設定
+    6. 実践：設定値の変更方法
 
 ---
 
