--- a/docs-site/docs/04_変数定義.md
+++ b/docs-site/docs/04_変数定義.md
@@ -1,15 +1,14 @@
 # 04. 変数定義 - variables.tfの読み方
 
-## このChapterでやること
+!!! info "この章で学ぶこと"
+    `variables.tf`の型定義を完全理解します：
 
-Chapter 3で見た`platform-landing-zone.auto.tfvars`（設定ファイル）の「型定義」を解説する。
-
-**例えるなら**：
-
-- `platform-landing-zone.auto.tfvars`：注文内容（「ラーメン1つ、餃子2つ」）
-- `variables.tf`：メニュー（「ラーメンは文字列、餃子は数値」）
-
-メニューを見れば、何が注文できるか、どんな形式で書けばいいかわかる。
+    1. 変数定義の3つの要素（型・バリデーション・デフォルト値）
+    2. 基本型（string、number、bool）
+    3. コレクション型（list、map、set）
+    4. 構造型（object）とoptional修飾子
+    5. バリデーションルールの書き方
+    6. 実践：カスタム変数の追加方法
 
 ---
 
