--- a/docs-site/docs/05_ローカル変数.md
+++ b/docs-site/docs/05_ローカル変数.md
@@ -1,16 +1,14 @@
 # 05. ローカル変数 - locals.tfの役割
 
-## このChapterでやること
+!!! info "この章で学ぶこと"
+    `locals.tf`の役割と実装パターンを理解します：
 
-`locals.tf`の役割を理解する。
-
-**例えるなら**：
-
-- `variables.tf`：材料（卵、砂糖、小麦粉）
-- `locals.tf`：下ごしらえ（卵を溶く、材料を混ぜる）
-- `main.tf`：調理（オーブンで焼く）
-
-変数をそのまま使うんじゃなくて、**計算・加工してから使う**。
+    1. localsとvariablesの違い
+    2. ローカル変数の定義と参照方法
+    3. 実際のlocals.tfファイル完全解説
+    4. 条件分岐（三項演算子）の使い方
+    5. データ変換パターン（merge、coalesce）
+    6. 実践：複雑な計算ロジックの実装
 
 ---
 
