--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -1,33 +1,14 @@
 # 08. 管理グループとポリシー - ガバナンスの要
 
-## 8つの設計領域との対応
+!!! info "この章で学ぶこと"
+    管理グループとポリシーの全体像を完全理解します：
 
-このChapterは以下の設計領域を実装します：
-
-- ✅ **2. Identity and Access Management**（ID・アクセス管理 - RBAC、権限管理）
-- ✅ **3. Resource Organization**（リソース整理 - 管理グループ階層）
-- ✅ **5. Security**（セキュリティ - セキュリティポリシー）
-- ✅ **7. Governance**（ガバナンス - ポリシー定義と適用）
-
-→ Chapter 01で学んだ8つの設計領域を復習したい方は[01_基礎知識.md](./01_基礎知識.md)へ
-
----
-
-## このChapterでやること
-
-管理グループとポリシーの仕組みを理解しよう。
-
-**管理グループって何？**
-サブスクリプションを束ねる「フォルダ」みたいなもん。
-
-**ポリシーって何？**
-「これやっちゃダメ」「これやらないとダメ」みたいなルール。
-
-**例えるなら**：
-
-- **管理グループ**：会社の部署（営業部、開発部、総務部）
-- **ポリシー**：社内規定（「経費は1万円まで」「セキュリティ研修必須」）
-- **サブスクリプション**：各チーム
+    1. 管理グループの階層構造（8階層）
+    2. main.management.tfの完全解説
+    3. modules/management_groups/内部実装
+    4. Azure/avm-ptn-alz公式モジュール完全解説
+    5. lib/フォルダのYAML定義
+    6. 実践：カスタムポリシーの追加方法
 
 ---
 
