--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -1,12 +1,14 @@
 # Chapter 09: 管理リソース（Log Analytics、DCR、Managed Identity）
 
-Azure Landing Zonesの「目」と「耳」を作っていくよ。
+!!! info "この章で学ぶこと"
+    管理リソースの全体像を完全理解します：
 
-- **Log Analytics Workspace**：全てのログを集約する場所
-- **Data Collection Rules（DCR）**：どのログを集めるかのルール
-- **Managed Identity**：パスワード不要の認証
-
-この3つが揃うことで、Azure環境全体の監視が可能になる。
+    1. Log Analytics Workspace、DCR、Managed Identityの役割
+    2. platform-landing-zone.auto.tfvarsの設定解説
+    3. modules/management_resources/内部実装
+    4. Azure/avm-ptn-alz-management公式モジュール完全解説
+    5. Data Collection Rules（DCR）の3種類詳細
+    6. 実践：カスタムDCRの追加方法
 
 ---
 
