fix: Chapter 08とChapter 03の内容修正
- Chapter 08: info box追加時に誤って削除されていた内容を復元
- Chapter 03: 必要な修正を適用
- 手動修正により正しい内容に復元完了

--- a/docs-site/docs/03_設定ファイル完全解説.md
+++ b/docs-site/docs/03_設定ファイル完全解説.md
@@ -1,7 +1,7 @@
 # 03. 設定ファイル完全解説 - platform-landing-zone.auto.tfvars
 
 !!! info "この章で学ぶこと"
-    `platform-landing-zone.auto.tfvars`（約500行）を完全解説します：
+    `platform-landing-zone.auto.tfvars`を完全解説します：
 
     1. テンプレート変数の仕組み（`$${ }`記法）
     2. ファイル構造の全体像（6つのセクション）
