Chapter 08: 章の形式統一とPart5の簡略化

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -1,8 +1,16 @@
-# Chapter 08: 管理グループとポリシー
+# 08. 管理グループとポリシー - Azure Landing Zonesの心臓部
 
-このChapterでは、Azure Landing Zonesの心臓部である**管理グループ階層**と**ポリシーアーキテクチャ**を解説します。
+!!! info "この章で学ぶこと"
+    Azure Landing Zonesの核となる管理グループとポリシーの仕組みを学びます：
 
-実際のコードを見ながら、管理グループの階層構造、設定ファイル、そしてポリシーの適用方法を完全に理解していきましょう。
+    1. 管理グループの階層構造（概念説明）
+    2. platform-landing-zone.auto.tfvarsの解説（管理グループ設定）
+    3. main.management.tfの解説（モジュール呼び出し）
+    4. lib/フォルダのYAML解説（ポリシー定義）
+    5. locals.tfの変換処理（データ加工）
+    6. modules/management_groups/の解説（ローカルモジュール）
+    7. 公式モジュールの内部解説（Azure/avm-ptn-alz/azurerm）
+    8. 実践パターン（カスタマイズ方法）
 
 ---
 
@@ -47,7 +55,7 @@ alz に「特定リージョン以外は使用禁止」ポリシーを適用
 
 ### この Chapter で学ぶこと
 
-1. **設定ファイル（platform-landing-zone.auto.tfvars）**: どんな設定ができるのか（533行全解説）
+1. **設定ファイル（platform-landing-zone.auto.tfvars）**: どんな設定ができるのか
 2. **main.management.tf**: どうやって管理グループを作るのか
 3. **lib/ フォルダ**: YAMLでポリシーをどう定義するのか
 4. **locals.tf**: 設定がどう変換されるのか
@@ -57,7 +65,7 @@ alz に「特定リージョン以外は使用禁止」ポリシーを適用
 
 ---
 
-## Part 2: platform-landing-zone.auto.tfvarsの完全解説
+## Part 2: platform-landing-zone.auto.tfvarsの解説
 
 このファイルで管理グループのすべてを設定します。ここでは管理グループに関連する部分だけを解説します。
 
@@ -208,9 +216,6 @@ policy_assignments_to_modify = {
 - enforcement_modeの変更（強制モード/監査モード）
 - マネージドIDの追加
 
-### セクション6: 接続設定（行294-533）
-
-Hub-and-SpokeやVirtual WANの設定です。詳細はChapter 10-11で解説します。
 
 ---
 
@@ -472,38 +477,11 @@ role_definitions_to_remove: []
 
 ## Part 5: locals.tfの変換処理
 
-platform-landing-zone.auto.tfvars の設定を、モジュールに渡す形式に変換する処理です。
+platform-landing-zone.auto.tfvars の設定を、モジュールに渡す形式に変換する処理です。管理グループとポリシーに関連する部分だけを解説します。
 
-### ファイル全体
+### 管理グループ関連の変換処理
 
-```hcl title="locals.tf"
-locals {
-  const = {
-    connectivity = {
-      virtual_wan        = "virtual_wan"
-      hub_and_spoke_vnet = "hub_and_spoke_vnet"
-      none               = "none"
-    }
-  }
-}
-
-locals {
-  connectivity_enabled                    = var.connectivity_type != local.const.connectivity.none
-  connectivity_virtual_wan_enabled        = var.connectivity_type == local.const.connectivity.virtual_wan
-  connectivity_hub_and_spoke_vnet_enabled = var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet
-}
-
-# Build an implicit dependency on the resource groups
-locals {
-  resource_groups = {
-    resource_groups = module.resource_groups
-  }
-  hub_and_spoke_networks_settings = merge(module.config.outputs.hub_and_spoke_networks_settings, local.resource_groups)
-  hub_virtual_networks            = (merge({ vnets = module.config.outputs.hub_virtual_networks }, local.resource_groups)).vnets
-  virtual_wan_settings            = merge(module.config.outputs.virtual_wan_settings, local.resource_groups)
-  virtual_hubs                    = (merge({ vhubs = module.config.outputs.virtual_hubs }, local.resource_groups)).vhubs
-}
-
+```hcl title="locals.tf（管理グループ関連部分）"
 # Build policy dependencies
 locals {
   management_group_dependencies = {
@@ -536,50 +514,7 @@ locals {
 }
 ```
 
-### 処理の流れ
-
-#### 1. 定数定義
-
-```hcl
-locals {
-  const = {
-    connectivity = {
-      virtual_wan        = "virtual_wan"
-      hub_and_spoke_vnet = "hub_and_spoke_vnet"
-      none               = "none"
-    }
-  }
-}
-```
-
-接続タイプの定数を定義しています。マジックストリングを避けるためのベストプラクティスです。
-
-#### 2. 接続タイプの判定
-
-```hcl
-locals {
-  connectivity_enabled                    = var.connectivity_type != local.const.connectivity.none
-  connectivity_virtual_wan_enabled        = var.connectivity_type == local.const.connectivity.virtual_wan
-  connectivity_hub_and_spoke_vnet_enabled = var.connectivity_type == local.const.connectivity.hub_and_spoke_vnet
-}
-```
-
-接続タイプに応じた条件変数を作成しています。
-
-#### 3. リソースグループの依存関係
-
-```hcl
-locals {
-  resource_groups = {
-    resource_groups = module.resource_groups
-  }
-  hub_and_spoke_networks_settings = merge(module.config.outputs.hub_and_spoke_networks_settings, local.resource_groups)
-}
-```
-
-接続リソースがリソースグループに依存することを明示的に定義しています。
-
-#### 4. ポリシーの依存関係（重要！）
+### ポリシー依存関係の構築
 
 ```hcl
 locals {
@@ -612,7 +547,7 @@ locals {
 2. `module.hub_and_spoke_vnet` が作成される（DDoS Planなど）
 3. その後、`module.management_groups` が作成される（ポリシー割り当て）
 
-#### 5. 設定のマージ
+### 設定のマージ
 
 ```hcl
 locals {
@@ -622,17 +557,26 @@ locals {
       dependencies = local.management_group_dependencies
     }
   )
+  management_resource_settings = merge(
+    module.config.outputs.management_resource_settings,
+    {
+      tags = coalesce(module.config.outputs.management_resource_settings.tags, module.config.outputs.tags)
+    }
+  )
 }
 ```
 
-config-templatingモジュールの出力に、依存関係を追加しています。
+**処理内容**:
 
-**処理の流れ**:
+1. **management_group_settings**:
+   - config モジュールの出力を取得
+   - 依存関係情報を追加
+   - modules/management_groups/ に渡す
 
-1. `platform-landing-zone.auto.tfvars` の `management_group_settings` を読み込む
-2. config-templatingモジュールで変数置換を実行
-3. `local.management_group_dependencies` を追加
-4. 最終的な設定を `local.management_group_settings` に格納
+2. **management_resource_settings**:
+   - config モジュールの出力を取得
+   - タグ情報をマージ
+   - modules/management_resources/ に渡す
 
 ---
 
@@ -759,6 +703,8 @@ Azure/terraform-azurerm-avm-ptn-alz/
 
 まず最初に、YAMLファイルを読み込んで処理します。
 
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.tf`
+
 ```hcl title="main.tf"
 data "alz_architecture" "this" {
   name                         = var.architecture_name
@@ -812,6 +758,8 @@ provider "alz" {
 ### ステップ2: データ変換（locals.tf）
 
 データソースから取得した生データを、Terraformリソースで使える形式に変換します。
+
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/locals.tf`
 
 #### 管理グループの変換
 
@@ -961,6 +909,8 @@ locals {
 
 レベルごとに順番に作成していきます。
 
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.management_groups.tf`
+
 ```hcl title="main.management_groups.tf（Level 0）"
 resource "azapi_resource" "management_groups_level_0" {
   for_each = local.management_groups_level_0
@@ -1047,6 +997,8 @@ resource "azapi_resource" "management_groups_level_2" {
 
 ### ステップ4: ポリシー定義の作成
 
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_definitions.tf`
+
 ```hcl title="main.policy_definitions.tf"
 resource "azapi_resource" "policy_definitions" {
   for_each = local.policy_definitions
@@ -1107,6 +1059,8 @@ resource "azapi_resource" "policy_definitions" {
    - 自動リトライで対処
 
 ### ステップ5: ポリシーセット定義の作成
+
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_set_definitions.tf`
 
 ```hcl title="main.policy_set_definitions.tf"
 resource "azapi_resource" "policy_set_definitions" {
@@ -1169,6 +1123,8 @@ resource "azapi_resource" "policy_set_definitions" {
 ```
 
 ### ステップ6: ポリシー割り当ての作成
+
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_assignments.tf`
 
 ```hcl title="main.policy_assignments.tf"
 resource "terraform_data" "policy_assignments_dependencies" {
@@ -1281,6 +1237,8 @@ resource "azapi_resource" "policy_assignments" {
 ### ステップ7: ポリシーロール割り当ての作成
 
 ポリシーがリソースを作成する場合、そのマネージドIDに権限を付与する必要があります。
+
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.policy_role_assignments.tf`
 
 ```hcl title="main.policy_role_assignments.tf"
 resource "terraform_data" "policy_role_assignments_dependencies" {
@@ -1406,6 +1364,8 @@ locals {
 
 ### ステップ8: マネージドIDの principal_id 取得
 
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/locals.tf`
+
 ```hcl
 locals {
   policy_assignment_identities = {
@@ -1447,6 +1407,8 @@ locals {
 ```
 
 ### time_sleep リソースによる待機
+
+**ファイル**: `Azure/terraform-azurerm-avm-ptn-alz/main.tf`
 
 ```hcl
 resource "time_sleep" "after_management_groups" {
