Chapter 07: はじめにセクションに設定ファイルの解説を追加

--- a/docs-site/docs/07_リソースグループ.md
+++ b/docs-site/docs/07_リソースグループ.md
@@ -56,6 +56,59 @@
 - **タグ管理**: コスト管理や分類
 - **RBAC**: アクセス権限の設定
 
+### どこで定義するの？
+
+リソースグループは `platform-landing-zone.auto.tfvars` で定義します。
+
+```hcl title="platform-landing-zone.auto.tfvars（抜粋）"
+connectivity_resource_groups = {
+  ddos = {
+    name     = "$${ddos_resource_group_name}"
+    location = "$${starter_location_01}"
+    settings = {
+      enabled = "$${ddos_protection_plan_enabled}"
+    }
+  }
+  vnet_primary = {
+    name     = "$${connectivity_hub_primary_resource_group_name}"
+    location = "$${starter_location_01}"
+    settings = {
+      enabled = true
+    }
+  }
+  vnet_secondary = {
+    name     = "$${connectivity_hub_secondary_resource_group_name}"
+    location = "$${starter_location_02}"
+    settings = {
+      enabled = true
+    }
+  }
+  dns = {
+    name     = "$${dns_resource_group_name}"
+    location = "$${starter_location_01}"
+    settings = {
+      enabled = "$${primary_private_dns_zones_enabled}"
+    }
+  }
+}
+```
+
+**ポイント**:
+
+- `$${変数名}`: テンプレート変数（Chapter 06で解説した置換システム）
+- `enabled`: true/falseで作成可否を制御
+- 4種類のリソースグループを定義：ddos、vnet_primary、vnet_secondary、dns
+
+**処理の流れ**:
+
+```
+1. platform-landing-zone.auto.tfvars で定義
+   ↓
+2. modules/config-templating で変数置換
+   ↓
+3. main.resource.groups.tf で作成
+```
+
 ---
 
 ## Part 1: main.resource.groups.tf の全体像
