Chapter 08: Part7の公式モジュール解説にスクリーンショット形式を追加

--- a/docs-site/docs/08_管理グループとポリシー.md
+++ b/docs-site/docs/08_管理グループとポリシー.md
@@ -678,7 +678,13 @@ policy_default_values = {
 
 **公式モジュール**: `Azure/avm-ptn-alz/azurerm` v0.14.1
 
+**GitHubリポジトリ：**
+
 https://github.com/Azure/terraform-azurerm-avm-ptn-alz
+
+
+ここからは公式のモジュールを開きながら見ていきましょう。こんな感じ↓
+![モジュールとドキュメントを並べて見る](img/スクリーンショット4.png)
 
 このモジュールがどうやって管理グループとポリシーを作成しているのか、実際のコードを見ながら完全に理解していきましょう。
 
